2008-08-05  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac: Bump version.
	
	* data/progress.xml:
	* src/nsc-gstreamer.[ch]: 
	* src/nsc-converter.c: Add progress bar to show
	speed and eta of file conversion.

2008-06-08  Brian Pepple  <bpepple@fedoraproject.org>

	* data/main.xml: Use gtk-convert button instead of
	gtk-ok button.

2008-04-05  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.5.0

2008-04-05  Brian Pepple  <bpepple@fedoraproject.org>

	* data/progress.glade:
	* data/progress.xml:
	* src/nsc-converter.c (progress_cancel_cb): 
	Add function to cancel file conversion.
	
2008-04-05  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac: Add checks for decodebin, audioconvert,
	and audioresample gstreamer elements.

	* src/nsc-gstreamer.[ch]:
	* src/nsc-extension.c (file_is_sound): 
	Add support for converting from vorbis, mp3,
	aac, and wav files. (Bug #1)

2008-04-04  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-gstreamer.c (connect_decodebin_cb): 
	Add code to use decodebin so that we can convert
	more than just flacs.

2008-03-31  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac: Set min version of glib2. (Bug #3)

2008-03-31  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.1.0

2008-03-31  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-progress.[ch]: Removed.

	* data/progress.glade:
	* data/progress.xml:
	* src/nsc-converter.c: 
	* src/Makefile.am: Move progress dialog code to
	nsc-converter.c.

2008-03-29  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-extension.c:
	* src/nsc-module.c:
	* src/nsc-gstreamer.c:
	* src/Makefile.am: clean up some compiler errors.
	
2008-03-29  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-converter.c (create_main_dialog): 
	* src/nsc-xml.[ch]:
	* src/Makefile.am:
	Add help functions for gtkbuiler.

	* data/main.glade:
	* data/main.xml: Use better title in dialog.
	
2008-03-29  Brian Pepple  <bpepple@fedoraproject.org> 

	* data/progress.xml: